--- a/Projekt/composer.json
+++ b/Projekt/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "corbanb/freebird-php": "^0.2.3"
+        "corbanb/freebird-php": "^0.2.3",
+        "cosenary/simple-php-cache": "dev-master"
     }
 }
